Add a handful more stats pages

--- a/molly/stats/templates/stats/popular_pages.html
+++ b/molly/stats/templates/stats/popular_pages.html
@@ -4,23 +4,21 @@
 
 <div class="section">
   <div class="header">
-    <h2>Pages that take a long time to generate (top 20)</h2>
+    <h2>{{ title }}</h2>
   </div>
     
     <table class="content">
       <thead>
         <tr>
           <th>Page</th>
-          <th>Average Generation Time</th>
           <th>Requests</th>
         </tr>
       </thead>
       <tbody>
-        {% for slow_page in slow_pages %}
+        {% for page in pages %}
         <tr>
-          <td><a href="{{ slow_page.full_path }}">{{ slow_page.full_path }}</a></td>
-          <td>{{ slow_page.average_response|floatformat:"3" }} s</td>
-          <td>{{ slow_page.count }}
+          <td><a href="{{ page.full_path }}">{{ page.full_path }}</a></td>
+          <td>{{ page.count }}
         </tr>
         {% endfor %}
       </tbody>
