Removed some unused images and html, as well as adding a small update to the mobile oxford about page for mobile

--- a/demos/molly_oxford/templates/static/about.html
+++ b/demos/molly_oxford/templates/static/about.html
@@ -2,14 +2,14 @@
   <h2 style="color:#002147;">About this site</h2>
   <div>
     <p>
-      Mobile Oxford was produced as part of the
+      Mobile Oxford was originally produced as part of the
       <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
       <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
       provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
       mobile devices.
     </p>
     <p>
-      It is designed and managed by the Erewhon Team at Oxford University Computing Services.
+      It is now designed and managed by the Mobile Oxford Team (also available for hire for mobile related projects) at Oxford University Computing Services.
     </p>
   </div>
 </div>
@@ -18,7 +18,7 @@
   <h2 style="color:#002147;">Credits</h2>
   <div>
     <p>
-      The Erewhon team would like to thank the following organisations for
+      The team would like to thank the following organisations for
       providing the data used in this site:
     </p>
         
