Fix broken image

--- a/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -11,7 +11,7 @@
 </form>
 
 <div style="position:absolute; left:10px; top:4px;">
-  <img style="font-size:30px; line-height:30px" src="{{ MEDIA_URL }}png/location.png" alt="⬠"/>
+  <img style="font-size:30px; line-height:30px" src="{{ MEDIA_URL }}site/png/location.png" alt="⬠"/>
 </div>
 
 <div class="location-alternatives"></div>
