--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -28,7 +28,7 @@
       <small>Left on <em>{{ form.instance.when|date:"D j M Y, g:i A" }}</em></small><br/>
     </li>
     <li>
-      <a href="{% url home:contact %}?referer={{ path }}&#35;{{ form.instance.when|date:"YmdHis" }}">Respond to this message</a>
+      <a href="{% url feedback:index %}?referer={{ path }}&#35;{{ form.instance.when|date:"YmdHis" }}">Respond to this message</a>
     </li>
     <li class="non-link-item">
       {{ form.DELETE }} {{ form.DELETE.label_tag }}
