Removed unnecessary folder nesting for blueprint

--- a/demos/molly_oxford/templates/desktop/index.html
+++ b/demos/molly_oxford/templates/desktop/index.html
@@ -3,12 +3,12 @@
 <head>
 <title>Mobile Oxford</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/screen.css"
+<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/screen.css"
 	type="text/css" media="screen,projection" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/print.css"
+<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/print.css"
 	type="text/css" media="print" />
 <!--[if IE]>
-    <link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/ie.css" type="text/css" media="screen,projection"/>
+    <link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/ie.css" type="text/css" media="screen,projection"/>
     <![endif]-->
 {% compressed_css "jquery.lightbox-0.5" %}
 <link rel="shortcut icon" href="{{ MEDIA_URL }}desktop/png/favicon.png" />
