removed groups subfolder in css requiring code change as well as moves

--- a/demos/molly_oxford/templates/base.html
+++ b/demos/molly_oxford/templates/base.html
@@ -41,7 +41,7 @@
 
 {% block header %}
 
-{% ifnotequal style_group "groups-dumb" %}
+{% ifnotequal style_group "dumb" %}
     <div id="bc-header">
       <ol id="bc">
         <li><a href="{% url home:index %}">
