--- a/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/apps/sakai/templates/sakai/signup/list.html
@@ -52,7 +52,7 @@
       {# Handle the rare occurence that tutorials start and end on different days #}
         {% ifequal event.start|date:"Y" event.end|date:"Y" %}
             {% ifequal event.start|date:"Y" now|date:"Y" %}
-            {# Event starts this year and finishes this year %}
+            {# Event starts this year and finishes this year #}
                 {{ event.start|date:"j M" }}, <small>{{ event.start|date:"g:iA"|lower}}</small>-
                 <br />{{ event.end|date:"j M" }}, <small>{{ event.end|date:"g:iA"|lower}}</small>
             {% else %}
