Be selective with which pages JavaScript is included on, and use a CDN's JQuery

--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -3,6 +3,8 @@
 {% load molly_apps_weather %}
 {% load portal_misc %}{% load maps %}{% load molly_apps_search %}{% load oxford_apps_river_status %}
 
+{% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
+
 {% block title %}Mobile Oxford{% endblock %}
 
 {% block header %}
