--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -49,6 +49,7 @@ ul li.transport-link a img { border: 0; }
 }
 
 </style>
+{% include "geolocation/js.html" %}
 {% endblock %}
 
 {% block content %}
