--- a/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -1,99 +1,87 @@
-<div class="location-box" id="location-box" style="position:relative; background-color:white; -webkit-border-radius:6px; -moz-border-radius:6px; margin:15px 10px 2px; padding:10px 50px">
-{% if location_error %}<p class="location-error">{{ location_error }}</p>{% endif %}
-<span class="location">{{ geolocation.name|default:"No location set" }}</span>
-<form method="post" action="{% url geolocation:index %}" class="location-form">
-        {% csrf_token %}
-        <label style="display:none;" for="location-name">Set a new location:</label>
-        <input class="return_url" name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
-        <input class="location-name" name="name" value="{{ location }}"/>
-        <input name="method" type="hidden" value="geocoded"/>
-        <input class="location-submit" type="submit" value="Update"/>
-
-</form>
-
-<div style="position:absolute; left:10px; top:4px;">
-  <img style="font-size:30px; line-height:30px" src="{{ MEDIA_URL }}site/png/location.png" alt="⬠"/>
-</div>
-
-<div class="location-alternatives"></div>
-
-<div id="location-history">
-  <h2>Location history</h2>
-  <div>
-{% if geolocation.history %}
-  <ul>
-{% for location in geolocation.history|slice:"1:" %}
-    <li>
-      <form class="location-history-form location-update-form" method="post" action="{% url geolocation:index %}">
-        {% csrf_token %}
-        <input type="hidden" name="method" value="manual"/>
-        <input type="hidden" name="accuracy" value="{{ location.accuracy }}"/>
-        <input type="hidden" name="longitude" value="{{ location.location.0 }}"/>
-        <input type="hidden" name="latitude" value="{{ location.location.1 }}"/>
-        <input type="hidden" name="return_url" value="{{ full_path }}"/>
-        <input type="hidden" name="name" value="{{ location.name }}"/>
-        <input type="submit" value="{{ location.name }}"/>
-      </form>
-      <form class="location-history-form" method="post" action="{% url geolocation:favourites %}">
-        {% csrf_token %}
-        <input type="hidden" name="action" value="add"/>
-        <input type="hidden" name="accuracy" value="{{ location.accuracy }}"/>
-        <input type="hidden" name="longitude" value="{{ location.location.0 }}"/>
-        <input type="hidden" name="latitude" value="{{ location.location.1 }}"/>
-        <input type="hidden" name="return_url" value="{{ full_path }}"/>
-        <input type="hidden" name="name" value="{{ location.name }}"/>
-        <input type="submit" value="Add as favourite"/>
-      </form>
-    </li>
-{% endfor %}
-  </ul>
-{% else %}
-  <p>No previous locations</p>
-{% endif %}
-  </div>
-
-</div>
-
-<div id="location-favourites">
-  <h2>Favourite locations</h2>
-  <div>
-{% if geolocation.favourites %}
-  <ul>
-{% for id, location in geolocation.favourites.items %}
-    <li>
-      <form class="location-history-form location-update-form" method="post" action="{% url geolocation:index %}">
-        {% csrf_token %}
-        <input type="hidden" name="method" value="manual"/>
-        <input type="hidden" name="accuracy" value="{{ location.accuracy }}"/>
-        <input type="hidden" name="longitude" value="{{ location.longitude }}"/>
-        <input type="hidden" name="latitude" value="{{ location.latitude }}"/>
-        <input type="hidden" name="return_url" value="{{ full_path }}"/>
-        <input type="hidden" name="name" value="{{ location.name }}"/>
-        <input type="submit" value="{{ location.name }}"/>
-      </form>
-      <form class="location-history-form" method="post" action="{% url geolocation:favourites %}">
-        {% csrf_token %}
-        <input type="hidden" name="action" value="remove"/>
-        <input type="hidden" name="return_url" value="{{ full_path }}"/>
-        <input type="hidden" name="id" value="{{ id }}"/>
-        <input type="submit" value="Remove"/>
-      </form>
-    </li>
-{% endfor %}
-  </ul>
-{% else %}
-  <p>No favourite locations</p>
-{% endif %}
-  </div>
-
-</div>
-
-  <form class="location-history-form location-clear-form" method="post" action="{% url geolocation:clear %}">
-        {% csrf_token %}
-    <p>
-      <input type="hidden" name="return_url" value="{{ full_path }}"/>
-      <input type="submit" value="Clear all location information"/>
-    </p>
-  </form>
-
+<div class="location-box section" id="location-box" style="position:relative; background-color:white; -webkit-border-radius:6px; -moz-border-radius:6px; margin:15px 10px 2px;">
+    <div class="current-location-box">
+        <img style="font-size:30px; line-height:30px; position: absolute; top: 7px; left: 4px;" src="{{ MEDIA_URL }}site/png/location.png" alt="⬠"/>
+        <p style="padding: 2px;line-height:17px;margin-left:34px;height:34px;"><span class="location">{{ geolocation.name|default:"No location known" }}</span><br/><span class="location-accuracy">{% if geolocation.accuracy %}within approx. {{ geolocation.accuracy|floatformat:"0" }} m{% endif %}</span></p>
+        <form method="get" action="{% url geolocation:index %}">
+            <input type="submit" name="update" value="Update" class="update-location-opener" style="position: absolute; top: 2px; right: 2px;" />
+        </form>
+    </div>
+    <div class="alternate-location-box" style="display:none;"></div>
+    <div class="update-location-box" style="display: none;">
+        <form method="get" action="{% url geolocation:index %}" class="update-location-form">
+            {% csrf_token %}
+            <input name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
+            <label for="name"><strong>Set location:</strong></label> <input type="text" name="name" class="update-location-name" />
+            <input name="method" type="hidden" value="geocoded" />
+            <input type="submit" value="Update" class="update-location" />
+        </form>
+        <div class="update-location-lists">
+            {% if geolocation.favourites %}
+                <div class="header">
+                    <h2>Or select a favourite location</h2>
+                </div>
+                <ul class="favourite-locations-list link-list{% if geolocation.history %} no-round-bottom{% endif %}">
+                  {% for id, favourite in geolocation.favourites.items %}
+                    <li>
+                        <form class="specific-location-form" method="post" action="{% url geolocation:index %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="method" value="manual"/>
+                            <input type="hidden" name="accuracy" value="{{ favourite.accuracy }}"/>
+                            <input type="hidden" name="longitude" value="{{ favourite.location.0 }}"/>
+                            <input type="hidden" name="latitude" value="{{ favourite.location.1 }}"/>
+                            <input type="hidden" name="return_url" value="{{ return_url }}"/>
+                            <input type="hidden" name="name" value="{{ favourite.name }}"/>
+                            <input type="submit" class="as-text-link" value="{{ favourite.name }}"/>
+                        </form>
+                        <form class="specific-location-form" method="post" action="{% url geolocation:favourites %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="action" value="remove"/>
+                            <input type="hidden" name="id" value="{{ id }}"/>
+                            <input type="hidden" name="return_url" value="{{ return_url }}"/>
+                            <input type="submit" class="as-text-link" value="(Remove from favourites)"/>
+                        </form>
+                    </li>
+                  {% endfor %}
+                </ul>
+            {% endif %}
+            {% if geolocation.history %}
+                <div class="header">
+                    <h2>Or select from history</h2>
+                </div>
+                <ul class="historic-locations-list link-list">
+                  {% for history in geolocation.history %}
+                    <li>
+                        <form class="specific-location-form" method="post" action="{% url geolocation:index %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="method" value="manual"/>
+                            <input type="hidden" name="accuracy" value="{{ history.accuracy }}"/>
+                            <input type="hidden" name="longitude" value="{{ history.location.0 }}"/>
+                            <input type="hidden" name="latitude" value="{{ history.location.1 }}"/>
+                            <input type="hidden" name="return_url" value="{{ return_url }}"/>
+                            <input type="hidden" name="name" value="{{ history.name }}"/>
+                            <input type="submit" class="as-text-link" value="{{ history.name }}"/>
+                        </form>
+                        <form class="specific-location-form" method="post" action="{% url geolocation:favourites %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="action" value="add"/>
+                            <input type="hidden" name="accuracy" value="{{ history.accuracy }}"/>
+                            <input type="hidden" name="longitude" value="{{ history.location.0 }}"/>
+                            <input type="hidden" name="latitude" value="{{ history.location.1 }}"/>
+                            <input type="hidden" name="return_url" value="{{ return_url }}"/>
+                            <input type="hidden" name="name" value="{{ history.name }}"/>
+                            <input type="submit" class="as-text-link" value="(Add as favourite)"/>
+                        </form>
+                    </li>
+                  {% endfor %}
+                    <li>
+                        <form class="location-history-form" method="post" action="{% url geolocation:clear %}">
+                          {% csrf_token %}
+                          <input name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
+                          <input class="as-text-link" type="submit" value="Clear history" />
+                        </form>
+                    </li>
+                </ul>
+            {% endif %}
+        </div>
+    </div>
 </div>
