--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -1,7 +1,7 @@
 {% load portal_misc %}{% load compressed %}<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" manifest="/static/app-cache.manifest">
 <head>
-        <title>{% block title %}m.ox | {{ breadcrumbs.4 }}{% endblock %}</title>
+        <title>{% block site_title %}molly | {% endblock %}{% block title %}{{ breadcrumbs.4 }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"/>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <meta name="format-detection" content="telephone=no" />
