Remove m.ox from templates which have it - this is now defined as a new block in base.html (and overridable)

--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -3,6 +3,7 @@
 {% load molly_apps_weather %}
 {% load portal_misc %}{% load maps %}{% load molly_apps_search %}{% load oxford_apps_river_status %}
 
+{% block site_title %}{% endblock %}
 {% block title %}Mobile Oxford{% endblock %}
 
 {% block header %}
