--- a/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/apps/contact/templates/contact/result_list.html
@@ -2,7 +2,7 @@
 
 {% extends "contact/base.html" %}{% load portal_misc %}
 
-{% block title %}m.ox | Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
+{% block title %}Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
 
 {% block content %}
 
