--- a/molly/apps/feeds/templates/rss/events/item_detail.html
+++ b/molly/apps/feeds/templates/rss/events/item_detail.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pagetitle %}News item{% endblock %}
-{% block title %}m.ox | News: {{ item.title }}{% endblock %}
+{% block title %}News: {{ item.title }}{% endblock %}
 
 {% block content %}
 
