--- a/molly/apps/feeds/templates/rss/news/item_list.html
+++ b/molly/apps/feeds/templates/rss/news/item_list.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block pagetitle %}News feed{% endblock %}
-{% block title %}m.ox | News feed: {{ feed.title }}{% endblock %}
+{% block title %}News feed: {{ feed.title }}{% endblock %}
 
 {% block content %}
 
