--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -1,7 +1,7 @@
 {% extends "home/base.html" %}
 
 {% block pagetitle %}Messages{% endblock %}
-{% block title %}m.ox | Messages from the developers{% endblock %}
+{% block title %}Messages from the developers{% endblock %}
 
 {% block content %}
 
