--- a/molly/apps/places/templates/places/category_detail.html
+++ b/molly/apps/places/templates/places/category_detail.html
@@ -2,7 +2,7 @@
 {% load portal_misc %}
 
 {% block pagetitle %}{{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
-{% block title %}m.ox | {{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
+{% block title %}{{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
 
 {% block content %}
 
