--- a/molly/apps/places/templates/places/update_osm.html
+++ b/molly/apps/places/templates/places/update_osm.html
@@ -1,7 +1,7 @@
 {% extends "places/base.html" %}
 {% load maps %}{% load portal_misc %}
 
-{% block title %}m.ox | Update {{ entity.title }}{% endblock %}
+{% block title %}Update {{ entity.title }}{% endblock %}
 
 {% block extrahead %}{{ block.super }}
 <meta name="robots" content="noindex"/>{% endblock %}
