--- a/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pagetitle %}Podcast{% endblock %}
-{% block title %}m.ox | {{ podcast.title }}{% endblock %}
+{% block title %}{{ podcast.title }}{% endblock %}
 
 
 {% block extrahead %}
