--- a/molly/apps/search/templates/search/index.html
+++ b/molly/apps/search/templates/search/index.html
@@ -1,7 +1,7 @@
 {% extends "search/base.html" %}
 
 {% block pagetitle %}Search{% endblock %}
-{% block title %}m.ox | Search{% if results %}: {{ search_form.data.query }}{% endif %}{% endblock %}
+{% block title %}Search{% if results %}: {{ search_form.data.query }}{% endif %}{% endblock %}
 
 {% block content %}
 
