--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -2,7 +2,7 @@
 
 {% block pagetitleclass %}weather-header with-icon{% endblock %}
 {% block pagetitle %}Weather{% endblock %}
-{% block title %}m.ox | Weather{% endblock %}
+{% block title %}Weather{% endblock %}
 
 
 {% block content %}
