Change "Near Me" to "nearby" for consistency in how we address the user

--- a/molly/apps/places/templates/places/index.html
+++ b/molly/apps/places/templates/places/index.html
@@ -37,7 +37,7 @@
   {% include "geolocation/update_location_embed.html" %}
 </div>
   <ul class="link-list">
-    <li><a href="{% url places:nearby-list %}">Near Me</a></li>
+    <li><a href="{% url places:nearby-list %}">Nearby</a></li>
     <li class="round-bottom"><a href="{% url places:category-list %}">By Category</a></li>
   </ul>
 </div>
