--- a/molly/apps/z3950/templates/z3950/index.html
+++ b/molly/apps/z3950/templates/z3950/index.html
@@ -11,7 +11,7 @@
 	{% include "geolocation/update_location_embed.html" %}
     <ul class="link-list">
         <li><a href="{% url places:category-detail "university-library" %}">List of libraries</a></li>
-        <li class="round-bottom"><a href="{% url places:nearby-detail "university-library" %}">Libraries near me</a></li>
+        <li class="round-bottom"><a href="{% url places:nearby-detail "university-library" %}">Libraries nearby</a></li>
     </ul>
 </div>
 
